--- a/core/css/style.css
+++ b/core/css/style.css
@@ -1,4 +1,6 @@
 .login{position:relative;display:flex;justify-content:center;flex-direction:column;box-shadow:0 4px 8px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);-webkit-box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);-moz-box-shadow:0 4px 8px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19)}
+.navbar-brand{position:relative}
+.navbar-brand .version{position:absolute;font-size:12px!important;color:#fff;top:auto;right:0;bottom:5px;left:auto}
 .brand_logo_container{position:absolute;top:-25px}
 .brand_logo{margin-left:6px;width:200px}
 .fc .fc-toolbar button{-webkit-user-select:none;-moz-user-select:none}
@@ -17,18 +19,7 @@
 .media-gallery .card-img{width:100%;max-height:6rem;object-fit:cover;object-position:top}
 .media-gallery .btn-group{position:absolute;top:0;right:0}pre{width:100%;color:#fff;white-space:pre-wrap;white-space:-moz-pre-wrap!important;white-space:-pre-wrap;white-space:-o-pre-wrap;word-wrap:break-word}
 #google-title{position:relative;font-family:"Arial";font-size:18px;color:#1a0dab!important}
-#google-title.contentType:before{
-  content:attr(data-contentType);
-  position:absolute;
-  top:0;
-  right:auto;
-  bottom:auto;
-  left:-95px;
-  width:90px;
-  text-align:right;
-  font-size:10px;
-  color:#888;
-}
+#google-title.contentType:before{content:attr(data-contentType);position:absolute;top:0;right:auto;bottom:auto;left:-95px;width:90px;text-align:right;font-size:10px;color:#888}
 #google-title a{font-family:"Arial";font-size:18px;color:#1a0dab!important}
 #google-title a:hover{font-family:"Arial";font-size:18px;color:#1a0dab!important;text-decoration:underline}
 #google-link{font-family:"Arial";font-size:14px;color:#066921!important}
@@ -50,7 +41,18 @@
 .installimg svg{width:50%}
 
 .app-header .navbar-brand i svg{height:28px!important;width:155px!important}
-
+.app-header .nav-item .nav-link>.img-avatar{margin:-5px 20px 0 20px}
+[data-rank]:before{content:'Visitor';position:absolute;top:-5px;left:0;right:0;width:68px;text-align:center;font-size:9px;margin-top:-10px}
+[data-rank="100"]:before{content:'Subscriber'}
+[data-rank="200"]:before{content:'Member'}
+[data-rank="300"]:before{content:'Client'}
+[data-rank="400"]:before{content:'Contributor'}
+[data-rank="500"]:before{content:'Author'}
+[data-rank="600"]:before{content:'Editor'}
+[data-rank="700"]:before{content:'Moderator'}
+[data-rank="800"]:before{content:'Manager'}
+[data-rank="900"]:before{content:'Administrator'}
+[data-rank="1000"]:before{content:'Developer'}
 a.preferences .card-header{color:#fff}
 a.preferences:hover{text-decoration:none}
 a.preferences .card{overflow:hidden}
@@ -116,62 +118,6 @@ a.preferences .card .icon{position:absolute;color:rgba(255,255,255,.05);right:50
 .checkbox label,
 .fc .fc-toolbar button{float:left;padding:.8em 0;opacity:.7}
 .fc .fc-toolbar button,.note-btn{text-align:center;white-space:nowrap;vertical-align:middle}
-.elfinder{background-color:transparent!important;border-color:transparent!important;border-radius:0!important;box-shadow:none}
-.elfinder .ui-widget-content{background-color:#3A4149!important;border-color:#2f343a!important;color:#fff!important}
-.elfinder-resize-control input[type=text],
-.elfinder-resize-control input[type=number]{background-color:transparent}
-.elfinder-toolbar .elfinder-button.focus,
-.elfinder-toolbar .elfinder-button:focus,
-.elfinder-toolbar .elfinder-button:not(:disabled):not(.disabled).active:focus,
-.elfinder-toolbar .elfinder-button:not(:disabled):not(.disabled):active:focus,
-.show>.elfinder-toolbar .elfinder-button.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(115,129,143,.5)}
-.elfinder *{color:#fff!important}
-.elfinder-toolbar{background-color:#3A4149!important;border-bottom-color:#2F353A!important}
-.elfinder-toolbar .elfinder-button-search input{background-color:#515B65!important;border-width:1px!important;border-color:#23282C!important;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px}
-.elfinder-toolbar .elfinder-buttonset,
-.elfinder-toolbar .elfinder-buttonset .elfinder-toolbar-button-separator{background-color:transparent!important;border-color:transparent!important}
-.elfinder-toolbar .elfinder-button,
-.elfinder .ui-button{color:#fff!important;background-color:#73818f!important;border-color:#73818f!important}
-.elfinder-toolbar .elfinder-button:hover,
-.elfinder .ui-button:hover{color:#fff!important;background-color:#626e7a!important;border-color:#5c6873!important}
-.elfinder .elfinder-contextmenu-item:hover{color:#fff!important;background-color:#626e7a!important}
-.elfinder-toolbar .elfinder-button.disabled,
-.elfinder-toolbar .elfinder-button:disabled,
-.elfinder .ui-button.disabled,
-.elfinder .ui-button:disabled{color:#fff!important;background-color:#73818f!important;border-color:#73818f!important}
-.elfinder-toolbar .elfinder-button:not(:disabled):not(.disabled).active,
-.elfinder-toolbar .elfinder-button:not(:disabled):not(.disabled):active,
-.show>.elfinder-toolbar .elfinder-button.dropdown-toggle
-.elfinder .ui-button.active,{color:#fff!important;background-color:#5c6873!important;border-color:#56616c!important}
-.elfinder .elfinder-button-search-menu{background-color:#3A4149!important;border-color:#23282C!important}
-.ui-state-default{background-color:#73818f!important;border-color:#2f353a!important;color:#0f0!important}
-.elfinder-path-dir,
-.elfinder-stat-selected,
-.elfinder-stat-size,
-.elfinder-statusbar{color:#fff!important}
-.elfinder-statusbar{height:45px;background-color:#3A4149!important;border-color:transparent #2F353A #2F353A!important}
-.elfinder-path-other{color:#73818F;margin:0 3px}
-.elfinder-navbar,
-.elfinder-workzone{background-color:#2F353A!important}
-.elfinder-navbar{border-right-color:#3A4149!important}
-.elfinder-cwd-file:hover,
-.elfinder-navbar-dir:hover{background-color:#515d69!important;border-color:#515d69!important}
-.elfinder-cwd-file.selected,
-.elfinder-navbar-dir.ui-state-active{background:#626E7A!important;border-color:#626E7A!important}
-.elfinder .elfinder-cwd table thead td.ui-state-active{background:#5e6a76!important;border-color:#5e6a76!important}
-.elfinder-cwd-file-wrapper:hover,
-.elfinder-cwd-filename:hover{background-color:transparent!important}
-.elfinder-cwd-filename,.elfinder-navbar-icon{color:#fff!important}
-.ui-selected{background-color:#626E7A!important;border-color:#626E7A!important}
-.ui-dialog,.ui-state-hover{background-color:transparent!important}
-.ui-dialog{border-color:#23282c!important;box-shadow:0 0 15px rgba(0,0,0,.5);-webkit-border-radius:3px;border-radius:3px}
-.ui-dialog .ui-dialog-buttonpane,
-.ui-dialog .ui-dialog-content,
-.ui-dialog .ui-dialog-titlebar,
-.ui-tabs{background:#3a4149!important;border-color:#23282c!important}
-.elfinder-help-shortcuts,
-.ui-widget-header{background:#3a4149!important;border-color:transparent!important}
-
 [class*=" fc-icon-"],[class^=fc-icon-]{display:inline-block;background-repeat:no-repeat;background-image:url(../svg/libre-svg-black.svg);width:14px;height:14px;vertical-align:middle}.fc button,.fc button:active,.fc-state-default,.note-btn{background-image:none}.fc-icon-left-single-arrow{background-position:-70px -70px}.fc-icon-right-single-arrow{background-position:-84px -70px}.fc-icon-left-double-arrow{background-position:-70px -70px}.fc-icon-right-double-arrow{background-position:-84px -70px}.fc-icon-left-triangle{background-position:-112px -56px}.fc-icon-right-triangle{background-position:-126px -56px}.fc-icon-down-triangle{background-position:-98px -56px}.fc-icon-x:after{background-position:-168px -70px}.fc .fc-toolbar button{color:#fff;background-color:#73818f;border-color:#73818f;padding:6px 12px;margin-bottom:0;font-size:14px;font-weight:400;line-height:1.2em;-ms-touch-action:manipulation;touch-action:manipulation;cursor:pointer;-ms-user-select:none;user-select:none}.fc .fc-toolbar button:active:focus,.fc .fc-toolbar button:focus{box-shadow:0 0 0 .2rem rgba(115,129,143,.5);color:#fff;background-color:#626e7a!important;border-color:#73818f;outline:0;outline-offset:none}.fc .fc-toolbar button:focus,.fc .fc-toolbar button:hover{text-decoration:none}.fc .fc-toolbar button:active,body.bg1 .fc .fc-toolbar button:active{outline:0;-webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.125);box-shadow:inset 0 3px 5px rgba(0,0,0,.125)}.fc .fc-toolbar button:focus{box-shadow:0 0 0 .2rem rgba(115,129,143,.5);color:#fff;background-color:#626e7a!important;border-color:#73818f!important}.fc .fc-toolbar button:active,.fc .fc-toolbar button:hover{color:#fff;background-color:#626e7a!important;border-color:#73818f}.fc .fc-toolbar button:active:focus,.fc .fc-toolbar button:active:hover{color:#fff;background-color:#626e7a!important;border-color:#73818f!important}.fc-unthemed .fc-content,.fc-unthemed .fc-divider,.fc-unthemed .fc-list-heading td,.fc-unthemed .fc-list-view,.fc-unthemed .fc-popover,.fc-unthemed .fc-row,.fc-unthemed tbody,.fc-unthemed td,.fc-unthemed th,.fc-unthemed thead{border-color:#23282C!important}.fc-unthemed td.fc-today{color:#fff!important;background-color:#2f353a!important}.checkbox{padding:0 0 10px 10px;-webkit-border-radius:3px;border-radius:3px}.checkbox label{vertical-align:middle;position:relative;padding-left:5px;font-weight:700}table .checkbox label{margin-top:-12px;line-height:1.42857143}label.control-label.check{margin-top:8px!important;margin-left:0!important;margin-right:0!important}.checkbox label::after,.checkbox label::before{display:inline-block;left:0;margin-left:-20px;position:absolute}.checkbox label::before{width:17px;height:17px;border:1px solid #aaa;border-radius:3px;background-color:#fff;-webkit-transition:border .15s ease-in-out,color .15s ease-in-out;-o-transition:border .15s ease-in-out,color .15s ease-in-out;transition:border .15s ease-in-out,color .15s ease-in-out}.checkbox label::after{width:16px;height:16px;top:0;padding-left:3px;padding-top:1px;font-size:11px;color:#555}.checkbox input[type=checkbox]{opacity:0;z-index:1}.checkbox input[type=checkbox]:focus+label::before{outline:dotted thin;outline:-webkit-focus-ring-color auto 5px;outline-offset:-2px}.checkbox input[type=checkbox]:checked+label::after{content:"✓";position:absolute;top:-15px;right:auto;left:-2px;color:#888;font-size:28px;text-shadow:0 0 3px #ccc,0 1px 2px #000}.checkbox input[type=checkbox]:indeterminate+label::after{display:block;content:"";width:10px;height:3px;background-color:#555;border-radius:2px;margin-left:-16.5px;margin-top:7px}.checkbox input[type=checkbox]:disabled+label{opacity:.65}.checkbox input[type=checkbox]:disabled+label::before{background-color:#eee;cursor:not-allowed}.checkbox.checkbox-inline{margin-top:0}.checkbox-primary input[type=checkbox]:checked+label::before,.checkbox-primary input[type=checkbox]:indeterminate+label::before{background-color:#337ab7;border-color:#337ab7}.checkbox-danger input[type=checkbox]:checked+label::after,.checkbox-info input[type=checkbox]:checked+label::after,.checkbox-primary input[type=checkbox]:checked+label::after,.checkbox-success input[type=checkbox]:checked+label::after,.checkbox-warning input[type=checkbox]:checked+label::after{color:#fff}.checkbox-danger input[type=checkbox]:checked+label::before,.checkbox-danger input[type=checkbox]:indeterminate+label::before{background-color:#d9534f;border-color:#d9534f}.checkbox-info input[type=checkbox]:checked+label::before,.checkbox-info input[type=checkbox]:indeterminate+label::before{background-color:#5bc0de;border-color:#5bc0de}.checkbox-warning input[type=checkbox]:checked+label::before,.checkbox-warning input[type=checkbox]:indeterminate+label::before{background-color:#f0ad4e;border-color:#f0ad4e}.checkbox-success input[type=checkbox]:checked+label::before,.checkbox-success input[type=checkbox]:indeterminate+label::before{background-color:#5cb85c;border-color:#5cb85c}.checkbox-danger input[type=checkbox]:indeterminate+label::after,.checkbox-info input[type=checkbox]:indeterminate+label::after,.checkbox-primary input[type=checkbox]:indeterminate+label::after,.checkbox-success input[type=checkbox]:indeterminate+label::after,.checkbox-warning input[type=checkbox]:indeterminate+label::after{background-color:#fff}
 .note-editable kbd,
 .note-frame *{-moz-box-sizing:border-box;-ms-box-sizing:border-box}
