--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -100,20 +100,20 @@
 								<form class="px-4 py-3" method="post" action="<print url>">
 									<input type="hidden" name="act" value="login">
 									<div class="form-group">
-										<label>Username</label>
+										<label for="menuLoginUsername">Username</label>
 										<input type="text" id="menuLoginUsername" class="form-control" name="username" placeholder="Username...">
 									</div>
 									<div class="form-group">
-										<label>Password</label>
+										<label for="loginMenuPassword">Password</label>
 										<input type="password" id="loginMenuPassword" class="form-control" name="password" placeholder="Password...">
 									</div>
 									<button type="submit" class="btn btn-outline-secondary btn-block">Sign in</button>
 								</form>
 								<div class="dropdown-divider"></div>
 								<signup>
-									<a class="dropdown-item" href="login#signup">New around here? Sign up</a>
+									<a class="dropdown-item" href="login#signupform">New around here? Sign up</a>
 								</signup>
-								<a class="dropdown-item" href="login#reset">Forgot password?</a>
+								<a class="dropdown-item" href="login#resetform">Forgot password?</a>
 							</div>
 						</li>
 					</menuLogin>
