--- a/layout/default/aboutus.html
+++ b/layout/default/aboutus.html
@@ -6,6 +6,17 @@
 		<div class="row my-5">
 			<div class="col-12">
 				<div class="card">
+					<mediaitems>
+						<div class="container">
+							<div class="row m-0 mt-sm-5 justify-content-center">
+								<mediaimages>
+									<a href="<print media=file>" data-fancybox="gallery" class="card gallery bg-dark text-white col-3 col-sm-2 m-1 m-sm-2 p-0">
+										<img src="<print media=thumb>" class="img-fluid" alt="<print media=title>">
+									</a>
+								</mediaimages>
+							</div>
+						</div>
+					</mediaitems>
 					<div class="card-body">
 						<print page="notes">
 					</div>
