--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -18,7 +18,12 @@
 				<item>
 					<article class="card mb-5">
 						<json-ld>
-						<img class="card-img-top img-fluid" src="<print content=image>" alt="<print content=imageALT>">
+						<image>
+							<img class="card-img-top img-fluid" src="<print content=image>" alt="<print content=imageALT>">
+						</image>
+						<panoramic>
+							<div class="panorama" data-paver><img src="<print content=image>" alt="<print content=imageALT>"></div>
+						</panoramic>
 						<div class="card-body">
 							<h1 class="card-title"><print content="title"></h1>
 							<div class="card-text">
@@ -47,7 +52,7 @@
 									<div class="container">
 										<div class="row m-0 mt-sm-5 justify-content-center">
 											<mediaimages>
-												<a href="<print media=file>" data-fancybox="gallery" class="card gallery bg-dark text-white col-3 col-sm-2 m-1 m-sm-2 p-0">
+												<a href="<print media=file>" data-fancybox="media" class="card gallery bg-dark text-white col-3 col-sm-2 m-1 m-sm-2 p-0">
 						            	<img src="<print media=thumb>" class="img-fluid" alt="<print media=title>">
 												</a>
 											</mediaimages>
