--- a/layout/default/css/style.css
+++ b/layout/default/css/style.css
@@ -1,6 +1,8 @@
 *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}
 html{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-webkit-font-smoothing:antialiased;font-smoothing:antialiased}
 body{font-family:sans-serif;font-weight:300;font-size:1em}
+canvas{display:block}
+#gl{width:auto;height:500px}
 address{background-color:#fff;font-size:1.2em}
 address .icon{}
 address .info{margin-top:-25px;margin-left:35px}
@@ -43,8 +45,9 @@ a{color:#000;text-decoration:none;-webkit-transition:.3s all;-o-transition:.3s a
 a:hover{color:#888;text-decoration:none}
 .dropdown:hover>.dropdown-menu{display:block}
 .dropdown>.dropdown-toggle:active{pointer-events:none}
-.card-img-top{width:100%;object-fit:cover}
+.card-img-top{width:100%;height:30rem;object-fit:cover}
 .card-img-top.small{width:100%;height:17rem;object-fit:cover}
+.card-img-top.related{width:100%;height:auto;max-height:7rem;object-fit:cover}
 .card-img-top.home{height:10rem;object-fit:cover}
 .price{position:relative}
 .price .sold:after{content:"Sold";position:absolute;top:20px;right:-10px;bottom:0;left:-10px;transform:rotate(25deg);font-size:5em;line-height:1em;color:#f00;text-align:center;text-transform:uppercase;text-shadow:0 0 5px #f00,0 0 20px #000}
@@ -185,3 +188,6 @@ footer{font-size:1.25em}
 .corner-ribbon.outline-danger{background-color:#fff;color:#dc3545;border-color:#dc3545}
 .corner-ribbon.outline-light{background-color:#fff;color:#f8f9fa;border-color:#f8f9fa}
 .corner-ribbon.outline-dark{background-color:#fff;color:#343a40;border-color:#343a40}
+.panorama{margin-bottom:1.5rem;overflow-x:scroll;overflow-y:hidden;left:0;width:100%;height:500px}
+.panorama	img{height:100%}
+.paver--initialized{position:relative}.paver--ready{overflow:hidden}.paver--ready .paver__meta{background-color:rgba(0,0,0,.6);color:#eee;display:flex;justify-content:center;align-items:center;flex-direction:column;opacity:0;padding:.5rem;pointer-events:none;position:absolute;top:0;bottom:0;left:0;right:0;z-index:3;transition:opacity .125s ease-in-out;text-shadow:1px 1px 5px rgba(0,0,0,.125)}.paver--ready .paver__meta span{padding:0 10%}.paver--ready .paver__meta span.paver__title{font-size:2em;font-weight:700;line-height:1.5em;margin-bottom:.25em}.paver--ready .paver__meta span.paver__title:after{content:" ";display:block;border-bottom:1px solid #fff;width:33%;margin:0 auto}.paver--ready.paver--metaActive div[class^=paver__meta]{opacity:1}.paver--ready.paver--metaActive:hover div[class^=paver__meta]{opacity:0}.paver--ready div.paver__pano{background-size:cover;position:relative;z-index:1}.paver--ready div.paver__scroller{background-color:hsla(0,0%,100%,.33);border-radius:2px;height:4px;opacity:0;position:absolute;bottom:16px;left:32px;right:32px;z-index:2;transition:opacity .25s ease-in-out}.paver--ready div.paver__scroller span{background-color:hsla(0,0%,100%,.75);border-radius:2px;display:block;width:12.5%;height:4px}.paver--ready.paver--on:hover div.paver__scroller,.paver--ready.paver--tilting div.paver__scroller{opacity:1}@media only screen and (max-width:768px){.paver--ready.paver--metaActive div.paver__meta,.paver--ready.paver--on:hover div.paver__scroller{opacity:0}}.paver__meta1{background-color:rgba(0,0,0,.6);color:#eee;display:flex;justify-content:center;align-items:center;flex-direction:column;padding:.5rem;position:absolute;top:0;bottom:0;left:0;right:0;z-index:3;transition:opacity .125s ease-in-out;text-shadow:1px 1px 5px rgba(0,0,0,.125)}.paver__meta1 span{padding:0 10%}.paver__meta1 span.paver__title{font-size:2em;font-weight:700;line-height:1.5em;margin-bottom:.25em}.paver__meta1 span.paver__title:after{content:" ";display:block;border-bottom:1px solid #fff;width:33%;margin:0 auto}.paver__meta2{background-color:rgba(0,0,0,.6);color:#eee;display:flex;justify-content:center;flex-direction:column;padding:.5rem;pointer-events:none;position:absolute;top:0;bottom:0;left:0;right:0;z-index:3;transition:opacity .125s ease-in-out;text-shadow:1px 1px 5px rgba(0,0,0,.125)}.paver__meta2 span{padding:0 10%;width:100%}.paver__meta2 span.paver__title{font-size:2em;font-weight:700;line-height:1.5em;margin-bottom:.25em}.paver__meta3{background-color:rgba(0,0,0,.6);color:#eee;padding:.5rem 16.667%;position:absolute;pointer-events:none;bottom:0;left:0;right:0;z-index:3;transition:opacity .125s ease-in-out;text-shadow:1px 1px 5px rgba(0,0,0,.125)}.paver__meta3 span{display:inline}.paver__meta3 span.paver__title{font-weight:700}.paver__meta3 span.paver__title:after{content:":";margin-right:.25em}.paver__meta3 span.paver__desc{font-style:italic}
