--- a/layout/default/meta_footer.html
+++ b/layout/default/meta_footer.html
@@ -1,108 +1,11 @@
 		<script src="<print theme>/js/jquery.min.js"></script>
 		<script src="<print theme>/js/bootstrap.min.js"></script>
 		<script src="<print theme>/js/jquery.fancybox.min.js"></script>
-		<script src="<print theme>/js/aos.js"></script>
+		<panorama>
 		<script src="<print theme>/js/js.js"></script>
-		<script>
-			AOS.init();
-		</script>
 		<chatscript>
-			<script>
-				function updateChat(){
-					chatTimer=null;
-					$.ajax({
-						type:"POST",
-						url:"core/chat.php",
-						data:{sid:$('#chatsid').val()}
-					}).done(function(data){
-						if(data!='none'){
-							$("#chatScreen").html(data);
-							if(data!='')$('#chatBody').removeClass('d-none');
-							document.getElementById('chatScreen').scrollTop=9999999;
-						}
-					});
-					clearTimeout(chatTimer);
-					chatTimer=setTimeout(function(){
-						updateChat();
-					},2500);
-				}
-				function initChat(){
-					chatTimer=null;
-					$.ajax({
-						type:"POST",
-						url:"core/chat.php",
-						data:{sid:$('#chatsid').val()}
-					}).done(function(data){
-						if(data!='none'){
-							$("#chatScreen").html(data);
-							if(data!=''){
-								$('#chatBody').removeClass('d-none');
-								$('.chat-close,.chat-open').toggleClass('d-none');
-							}
-							if($('#chatBody').hasClass('d-none')){
-								clearTimeout(chatTimer);
-							}else{
-								$('.chathideme,.chatunhideme').toggleClass('d-none');
-								clearTimeout(chatTimer);
-							}
-						}
-						document.getElementById('chatScreen').scrollTop=9999999;
-					});
-				}
-				$(document).ready(function(){
-					initChat();
-					$("#chatHeader").click(function(e){
-						$('#chatBody,.chat-close,.chat-open').toggleClass('d-none');
-						if($('#chatBody').hasClass('d-none'))clearTimeout(chatTimer);
-					});
-					$('#startChat').click(function(){
-						$.ajax({
-							type:"POST",
-							url:"core/chat.php",
-							data:{
-								sid:$('#chatsid').val(),
-								who:$('#chatwho').val(),
-								name:$('#chatName').val(),
-								email:$('#chatEmail').val(),
-								message:'|*|*|*|*|*|'
-							}
-						}).done(function(data){
-							if(data=='available')$("#chatScreen").html('<ul><li class="admin"><p>Hello '+$('#chatName').val()+', how can we assist you?</p></li></ul>');
-							else $('#chatScreen').html(data);
-							document.getElementById('chatScreen').scrollTop=9999999;
-							$("#chatMessage").val("");
-							$('.chathideme,.chatunhideme').toggleClass('d-none');
-							clearTimeout(chatTimer);
-						});
-					});
-					$("#chatButton").click(function(){
-						$.ajax({
-							type:"POST",
-							url:"core/chat.php",
-							data:{
-								sid:$('#chatsid').val(),
-								who:$('#chatwho').val(),
-								name:$('#chatName').val(),
-								email:$('#chatEmail').val(),
-								message:$("#chatMessage").val()
-							}
-						}).done(function(data){
-							$("#chatScreen").html(data);
-							document.getElementById('chatScreen').scrollTop=9999999;
-							$("#chatMessage").val("");
-							clearTimeout(chatTimer);
-							chatTimer=setTimeout(function(){
-								updateChat();
-							},2500);
-						});
-					});
-				});
-			</script>
-		</chatscript>
 		<gdpr>
 		<websitevoice>
-		<jshelper>
-		<jsrunner>
 		<serviceworker>
 	</body>
 </html>
