--- a/layout/default/footer.html
+++ b/layout/default/footer.html
@@ -1,7 +1,7 @@
 <div class="container mb-5">
 	<footer>
 		<div class="row">
-			<div class="col-12 col-sm-3 mt-5">
+			<div class="col-12 col-sm-3 mt-5 text-center">
 				<img class="img-fluid mb-2" src="layout/default/images/logo.png" alt="<print config=business>">
 				<small class="d-block mb-3">&copy; <print year>. <print config="abn"></small>
 			</div>
